--- a/FrontEnd/public/manifest.json
+++ b/FrontEnd/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Paw Tracker",
+  "name": "Paw Tracker - Track and Monitor stray animals",
   "icons": [
     {
       "src": "favicon.ico",
